fix map views panel scrollbar

--- a/web/client/themes/default/less/map-views.less
+++ b/web/client/themes/default/less/map-views.less
@@ -44,6 +44,9 @@
         .ms-map-views-layers-options-header {
             .background-color-var(@theme-vars[main-bg]);
         }
+        .ms-map-views-list-header {
+            .background-color-var(@theme-vars[main-bg]);
+        }
     }
 
     .ms-map-view-progress-container {
@@ -162,13 +165,15 @@
     }
     .ms-map-views-body {
         display: flex;
+        overflow: auto;
+        max-height: 70vh;
     }
     .ms-map-views-description {
         .shadow();
         position: relative;
         margin-top: 8px;
-        max-height: 700px;
         overflow: auto;
+        max-height: 70vh;
         background-color: rgba(255, 255, 255, 0.8);
         padding: 8px;
         iframe {
@@ -184,8 +189,6 @@
     .ms-map-views-settings {
         padding: 0 4px 4px 4px;
         width: 100%;
-        max-height: 700px;
-        overflow: auto;
         label {
             font-weight: normal;
         }
@@ -193,10 +196,14 @@
     .ms-map-views-list {
         position: relative;
         width: 100%;
-        max-height: 700px;
-        overflow: auto;
         .ms-map-views-list-header {
-            padding: 0 12px;
+            padding: 8px 12px;
+            position: sticky;
+            top: 0;
+            z-index: 2;
+            > .checkbox {
+                margin: 0;
+            }
         }
         .ms-map-views-list-body {
             padding: 4px;
@@ -319,10 +326,10 @@
 }
 .ms-map-view-progress-container {
     width: 100%;
-    height: 2px;
+    height: 4px;
     position: relative;
     .ms-map-view-progress-bar {
-        height: 2px;
+        height: 4px;
         transition: 0.3s width;
     }
     .ms-map-view-progress-tick {
